Fix menu bug on mobile devices

--- a/eeh/static/css/style.scss
+++ b/eeh/static/css/style.scss
@@ -106,7 +106,6 @@ body {
 #messages {
   right: 30px;
   position: fixed;
-  height: 100%;
   width: 550px;
   z-index: 98;
 }
@@ -169,6 +168,7 @@ body {
 }
 
 .app-menu-item a {
+  height: 100%;
   position: relative;
   text-decoration: none;
   color: black;
@@ -188,14 +188,30 @@ body {
 }
 
 .btn-dashed-primary {
-    color: black;
-    background-color: transparent;
-    border-color: black;
-    border: 1px dashed;
+  color: black;
+  background-color: transparent;
+  border-color: black;
+  border: 1px dashed;
 }
 
 .btn-dashed-primary:hover {
-color: #fff;
-background-color: #007bff;
-border-color: #007bff;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+div.app-menu-item {
+  position: relative;
+  a {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    text-decoration: none; /* No underlines on the link */
+    z-index: 10; /* Places the link above everything else in the div */
+    background-color: #fff; /* Fix to make div clickable in IE */
+    opacity: 0; /* Fix to make div clickable in IE */
+    filter: alpha(opacity=1); /* Fix to make div clickable in IE */
+  }
 }
